--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
     "@reduxjs/toolkit": "^2.3.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.5",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
@@ -21,7 +24,8 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.13.0",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
