--- a/Client/package.json
+++ b/Client/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@reduxjs/toolkit": "^2.3.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.5",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.11",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
