--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
+    "@react-three/fiber": "^8.17.10",
     "@reduxjs/toolkit": "^2.3.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.5",
@@ -30,7 +31,8 @@
     "react-draggable": "^4.4.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.13.0",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
