--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@react-three/fiber": "^8.17.10",
     "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.5",
     "clsx": "^2.1.1",
