--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@react-three/fiber": "^8.17.10",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
@@ -23,6 +24,7 @@
     "framer-motion": "^11.11.11",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
